# git-absorb

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
src/: commands.rs  fetch.rs  lib.rs  log.rs  main.rs  pull.rs  rebase.rs  test.rs
tests/: lib.rs  test_commands.rs  tests.rs
