[package]
name = "git-absorb"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
description = "Git command to absorb and rebase changes into your branch"
keywords = ["git", "rebase", "absorb", "util"]
license = "MIT"
repository = "https://github.com/arnau/git-absorb"

[lib]
name = "absorb"
path = "src/lib.rs"

[dependencies]
docopt = "0.6.*"
rustc-serialize = "0.3"
git2 = "0.3.*"
time = "0.1.*"
log = "0.3"

[[bin]]
name = "git-absorb"
test = false
doc = false

[[test]]
name = "tests"
