[package]
name = "absorb"
version = "0.2.1"
authors = ["Arnau Siches <asiches@gmail.com>"]
description = "Git command to absorb and rebase changes into your branch"
keywords = ["git", "rebase", "absorb", "util"]
license = "MIT"
repository = "https://github.com/arnau/git-absorb"
edition = "2018"

[[bin]]
name = "git-absorb"
path = "src/main.rs"

[dependencies]
git2 = "0.13"
clap = "3.0.0-beta.2"

[dev-dependencies]
tempfile = "3.2.0"
